--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 ZhuFangZhi is a housing rental search engine under CC BY-NC-SA 3.0 license.
 This project is created by Liang Sun <i@liangsun.org> in April 2012.
-Thanks to Udacity for giving me the knowledge of building a search engine.
+Thanks to Udacity(http://www.udacity.com) for giving me the knowledge of building a search engine.
+ZhuFangZhi is hosted at http://zhufangzhi.com
